...
import { useSafeAreaInsets } from 'react-native-safe-area-context';

const MESSAGES = [
  'okay',
  'sudo make me a sandwich',
  'what? make it yourself',
  'make me a sandwich',
];

export function Chat({
  bottom,
  ...rest
}: Partial<ScrollViewProps & { bottom: boolean }>) {
...
