...
  return (
    <View style={[styles.row, styles.attribution]}>
      <Image
        source={require('../../assets/misc/avatar-1.png')}
        style={styles.avatar}
      />
      <Text style={styles.author}>Joke bot</Text>
    </View>
  );
};

const Footer = () => {
  return (
...
