appId: ${APP_ID}
name: Stack - Retain
---
- runFlow:
    file: ../launch.yml
    env:
      LINK: stack-retain
      TEXT: "Let's Go!"
- tapOn:
    text: "Let's Go!"
- assertVisible:
    text: 'Retain'
- assertVisible:
    text: '0'
- tapOn:
    text: 'Retain'
- assertVisible:
    text: '📌'
- assertVisible:
    text: '3'
- tapOn:
    id: 'Go back'
- tapOn:
    text: "Let's Go!"
- assertVisible:
    text: '3'
- assertVisible:
    text: '📌'
- tapOn:
    text: 'Unretain'
- assertVisible:
    text: 'Retain'
- tapOn:
    id: 'Go back'
- tapOn:
    text: "Let's Go!"
- assertNotVisible:
    text: '📌'
- assertVisible:
    text: 'Retain'
- assertVisible:
    text: '0'
