appId: ${APP_ID}
name: Stack Transparent
---
- runFlow:
    file: ../launch.yml
    env:
      LINK: stack-transparent
      TEXT: 'Article'
- tapOn:
    text: 'Show Dialog'
- assertVisible:
    text: 'Trivia'
- tapOn:
    text: 'Okay'
- assertNotVisible:
    text: 'Trivia'
- tapOn:
    text: 'Push NewsFeed'
- assertVisible:
    text: 'NewsFeed'
- tapOn:
    text: 'Show Dialog'
- assertVisible:
    text: 'Trivia'
- tapOn:
    text: 'Okay'
- assertNotVisible:
    text: 'Trivia'
