appId: ${APP_ID}
name: Tab View - Scroll Adapter
---
- runFlow:
    file: ../launch.yml
    env:
      LINK: libraries-tab-view/scroll-adapter
      TEXT: 'Marissa Castillo'
- tapOn:
    text: 'Article'
- extendedWaitUntil:
    visible:
      text: 'What is Lorem Ipsum?'
    timeout: 5000
- tapOn:
    text: 'Albums'
- extendedWaitUntil:
    visible:
      id: 'album-0'
    timeout: 5000
- tapOn:
    text: 'Contacts'
- extendedWaitUntil:
    visible:
      text: 'Marissa Castillo'
    timeout: 5000
