appId: ${APP_ID}
name: Tab View - Custom Tab Bar
---
- runFlow:
    file: ../launch.yml
    env:
      LINK: libraries-tab-view/custom-tab-bar
      TEXT: 'Custom tab bar'
- assertVisible:
    text: 'Marissa Castillo'
- tapOn:
    id: 'albums'
- extendedWaitUntil:
    visible:
      id: 'album-0'
    timeout: 5000
- tapOn:
    id: 'article'
- extendedWaitUntil:
    visible:
      text: 'What is Lorem Ipsum?'
    timeout: 5000
- tapOn:
    id: 'chat'
    delay: 500
- extendedWaitUntil:
    visible:
      text: 'make me a sandwich'
    timeout: 5000
- tapOn:
    id: 'contacts'
- extendedWaitUntil:
    visible:
      text: 'Marissa Castillo'
    timeout: 5000
- swipe:
    direction: LEFT
    duration: 300
- extendedWaitUntil:
    visible:
      id: 'album-0'
    timeout: 5000
- swipe:
    direction: LEFT
    duration: 300
- extendedWaitUntil:
    visible:
      text: 'What is Lorem Ipsum?'
    timeout: 5000
- swipe:
    direction: RIGHT
    duration: 300
- extendedWaitUntil:
    visible:
      id: 'album-0'
    timeout: 5000
