appId: ${APP_ID}
name: Drawer - Master Detail
---
- runFlow:
    file: ../launch.yml
    env:
      LINK: drawer-master-detail
      TEXT: 'Pages'
- tapOn:
    text: 'Feed'
- assertVisible:
    text: 'Joke bot'
- tapOn:
    text: 'Go back'
- tapOn:
    text: 'Albums'
- assertVisible:
    text: 'Albums'
- assertNotVisible:
    text: 'Joke bot'
- tapOn:
    text: 'Go back'
- tapOn:
    text: 'Article'
- assertVisible:
    text: 'What is Lorem Ipsum?'
