appId: ${APP_ID}
name: Showcase - Drawer
---
- runFlow:
    file: ../launch.yml
    env:
      LINK: drawer-showcase
      TEXT: 'Total Balance'
- tapOn:
    id: 'showcase-drawer-toggle'
- runFlow:
    when:
      platform: Android
    commands:
      - waitForAnimationToEnd
- tapOn:
    id: 'showcase-drawer-budgets'
- runFlow:
    when:
      platform: Android
    commands:
      - waitForAnimationToEnd
- assertVisible:
    text: 'Monthly Budget'
- tapOn:
    id: 'showcase-drawer-toggle'
- runFlow:
    when:
      platform: Android
    commands:
      - waitForAnimationToEnd
- tapOn:
    id: 'showcase-drawer-accounts'
- runFlow:
    when:
      platform: Android
    commands:
      - waitForAnimationToEnd
- assertVisible:
    text: 'Main Checking'
